# discern-sdk

./: .editorconfig  .gitignore  Cargo.toml  Justfile  allowed_signers  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
clients/audio/: package.json
clients/audio/src/: index.ts
clients/twitch/: package.json
clients/twitch/src/: index.ts  types.ts
clients/twitch/src/api/: ads.ts  analytics.ts  bits.ts  ccLs.ts  channelPoints.ts  channels.ts  charity.ts  chat.ts  clips.ts  conduits.ts  entitlements.ts  extensions.ts  games.ts  goals.ts  guestStar.ts  hypeTrain.ts  index.ts  moderation.ts  polls.ts  predictions.ts  raids.ts  schedule.ts  search.ts  streams.ts  subscriptions.ts  tags.ts  teams.ts  users.ts  videos.ts  whispers.ts
plugins/twitch/: package.json  tsconfig.json
plugins/twitch/src/: connection.ts  plugin.ts  requests.ts  token.ts  types.ts
scripts/: package.bun.js  package.sh
scripts/twitch/: Cargo.toml
scripts/twitch/src/: extract.rs  file.rs  main.rs
scripts/twitch/src/render/: method.rs  mod.rs  response.rs  types.rs
sdk/types/: index.d.ts  package.json  tsconfig.json
